Bug 902370 - Fix and Unit test for renaming imap folder. r=Neil